; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_data_item_get_string.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_data_item_get_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OBS_DATA_STRING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8* (i32*)*)* @data_item_get_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @data_item_get_string(i32* %0, i8* (i32*)* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8* (i32*)*, align 8
  store i32* %0, i32** %3, align 8
  store i8* (i32*)* %1, i8* (i32*)** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @OBS_DATA_STRING, align 4
  %7 = call i64 @item_valid(i32* %5, i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %18

9:                                                ; preds = %2
  %10 = load i8* (i32*)*, i8* (i32*)** %4, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i8* %10(i32* %11)
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %9
  %15 = load i8* (i32*)*, i8* (i32*)** %4, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = call i8* %15(i32* %16)
  br label %19

18:                                               ; preds = %9, %2
  br label %19

19:                                               ; preds = %18, %14
  %20 = phi i8* [ %17, %14 ], [ getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), %18 ]
  ret i8* %20
}

declare dso_local i64 @item_valid(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
